--- a/src/main/webapp/helloform.html
+++ b/src/main/webapp/helloform.html
@@ -4,22 +4,28 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
-    <head>
-        <title>Formulário de HelloWorld (usando o HelloServlet.java)</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>Formulário de HelloWorld (usando o HelloServlet.java)</div>
-           <form action="alomundo" method="post">
-           <br>Idioma: <input type="radio" name="lang" value="pt" checked> Português
-           <input type="radio" name="lang" value="en"> Inglês
-           <input type="radio" name="lang" value="fr"> Francês
-           <input type="radio" name="lang" value="de"> Alemão<br><br>
-           Nome: <input type="text" name="nome"/><br><br>
-           <input type="submit" value="Cumprimentar"/>
-        </form>
-
-    </body>
+<html lang="pt" xmlns="http://www.w3.org/1999/html">
+<head>
+    <title>Formulário de HelloWorld (usando o HelloServlet.java)</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div>Formulário de HelloWorld (usando o HelloServlet.java)</div>
+    <form action="alomundo" method="post">
+        <br>Idioma: <input type="radio" name="lang" value="pt" checked> Português
+        <input type="radio" name="lang" value="en"> Inglês
+        <input type="radio" name="lang" value="fr"> Francês
+        <input type="radio" name="lang" value="de"> Alemão<br><br>
+        Nome: <input type="text" name="nome"/><br><br>
+        Email: <input type="email" name="email"><br><br>
+        Idade: <input type="number" name="idade" min="18" max="100"><br><br>
+        Gênero: <select name="genero" size="3"/><br><br>
+        <option value="homem">Homem</option>
+        <option value="mulher">Mulher</option>
+        <option value="outro">Outro</option>
+        </select><br><br>
+        <input type="submit" value="Cumprimentar"/>
+    </form>
+</body>
 </html>
