--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html xml:lang="pt">
     <head>
         <title>Demo do Tópico 1</title>
         <meta charset="UTF-8">
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>Funcionalidades disponíveis:</div>
-        <p>HelloServlet.java (Método GET) (<a href=".\alomundo?lang=pt&nome=Fulano">link</a>)</p>
+        <p>HelloServlet.java (Método GET) (<a href=".\alomundo?lang=pt&nome=Fulano&email=fulano@gmail.com&idade=25&genero=outro">link</a>)</p>
         <p>Formulário de HelloWorld (usando o HelloServlet.java - Método POST) (<a href=".\helloform.html">link</a>)</p>
         <p>Formulário de HelloWorld (usando o sayhello.jsp) (<a href=".\helloform2.html">link</a>)</p>
     </body>
